# omcproxy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: devel-build.sh
src/: groups.c  mrib.c  omcproxy.c  omcproxy.h  proxy.c
